--- a/beyond40task/package.json
+++ b/beyond40task/package.json
@@ -8,12 +8,15 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "chart": "^0.1.2",
+    "js": "^0.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-rating-stars-component": "^2.2.0",
     "react-scripts": "4.0.3",
     "react-simple-star-rating": "^4.0.0",
     "react-star-ratings": "^2.3.0",
+    "react-stars": "^2.2.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
