--- a/beyond40task/package.json
+++ b/beyond40task/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.1.3",
     "chart": "^0.1.2",
     "js": "^0.1.0",
     "react": "^17.0.2",
@@ -17,6 +18,8 @@
     "react-simple-star-rating": "^4.0.0",
     "react-star-ratings": "^2.3.0",
     "react-stars": "^2.2.5",
+    "react-step-progress-bar": "^1.0.3",
+    "reactstrap": "^9.0.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
